# cpp-codebase

build-qt0621_02-Qt_6_3_2_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qt0621_02
build-qt0621_02-Qt_6_3_2_for_macOS-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-9e00e53e33861b88be0f.json  codemodel-v2-4762a2c69268b3e4ac6a.json  directory-.-Debug-841a0211d7ec9d454276.json  index-2023-06-21T01-35-45-0625.json  target-qt0621_02-Debug-0ef8ae0d3b291de6d280.json  target-qt0621_02_autogen_timestamp_deps-Debug-c7ffcb2950f53195a042.json
build-qt0621_02-Qt_6_3_2_for_macOS-Debug/.cmake/api/v1/reply.prev/: cache-v2-0d54b5904fca40ad6f8f.json  codemodel-v2-9040a84d03c838411d55.json  directory-.-Debug-4691583640b913b72799.json  index-2023-06-21T01-33-58-0922.json  target-qt0621_02-Debug-2cb5f14d8427a54af0bb.json  target-qt0621_02_autogen-Debug-e41a473ce674f98876f4.json
build-qt0621_02-Qt_6_3_2_for_macOS-Debug/.qt/: QtDeploySupport.cmake
build-qt0621_02-Qt_6_3_2_for_macOS-Debug/.qtc_clangd/: compile_commands.json
build-qt0621_02-Qt_6_3_2_for_macOS-Debug/.qtc_clangd/.cache/clangd/index/: Freezer.h.D7414D501CCA6C69.idx  Microwave.h.464D251E03B55D24.idx  QCoreApplication.821FF0DAB028E6BC.idx  (+66 more)
build-qt0621_02-Qt_6_3_2_for_macOS-Debug/qt0621_02_autogen/: deps
build-qt0621_02-Qt_6_3_2_for_macOS-Debug/qt0621_02_autogen/EWIEGA46WW/: moc_applicance.cpp  moc_applicance.cpp.d
build-qt_0621_01-Qt_6_3_2_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qt_0621_01
build-qt_0621_01-Qt_6_3_2_for_macOS-Debug/.qt/: QtDeploySupport.cmake
build-qt_0621_01-Qt_6_3_2_for_macOS-Debug/.qtc_clangd/: compile_commands.json
build-qt_0621_01-Qt_6_3_2_for_macOS-Debug/qt_0621_01_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-qt_0621_01-Qt_6_3_2_for_macOS-Debug/qt_0621_01_autogen/EWIEGA46WW/: moc_animal.cpp  moc_animal.cpp.d  moc_canine.cpp  moc_canine.cpp.d  moc_feline.cpp  moc_feline.cpp.d  moc_mammal.cpp  moc_mammal.cpp.d  moc_monster.cpp  moc_monster.cpp.d
qml_0623_01/: CMakeLists.txt  Main.qml  main.cpp
qml_0624_03/: CMakeLists.txt  Main.qml  main.cpp
qml_0624_04/: CMakeLists.txt  Main.qml  main.cpp
qml_0624_05/: CMakeLists.txt  Main.qml  main.cpp
qml_0624_06/: CMakeLists.txt  Main.qml  main.cpp
qml_0624_07/: CMakeLists.txt  Main.qml  main.cpp
qml_0624_08/: CMakeLists.txt  Main.qml  main.cpp
qt0621_02/: CMakeLists.txt  Freezer.h  Microwave.h  Toaster.h  applicance.cpp  applicance.h  main.cpp
qt_0620/: CMakeLists.txt  laptop.cpp  laptop.h  main.cpp  main.cpp.autosave
qt_0621_01/: CMakeLists.txt  animal.cpp  animal.h  canine.cpp  canine.h  feline.cpp  feline.h  main.cpp  mammal.cpp  mammal.h
qt_0621_04/: CMakeLists.txt  agecalc.cpp  agecalc.h  main.cpp
qt_0622_01/: CMakeLists.txt  main.cpp
qt_0622_02/: CMakeLists.txt  animal.cpp  animal.h  main.cpp
qt_0622_03/: CMakeLists.txt  main.cpp
qt_0622_04/: CMakeLists.txt  animal.cpp  main.cpp  test.cpp
qt_0624_01/: CMakeLists.txt  Main.qml  main.cpp
qt_0624_02/: CMakeLists.txt  Main.qml  main.cpp
qt_0625_03/: CMakeLists.txt  main.cpp  test.cpp  test.h
qt_0625_04/: CMakeLists.txt  main.cpp
(+86 files in other folders)
